--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 
 <head>
     <meta charset=utf-8/>
+    <title> 
+        IC-04
+    </title>
 </head>
 
 
 <body>
+    <h1> INTRO to HTML and CSS </h1>
+    <h2> Johnson Wang </h2> 
+
+    <div id = "div1" class="container">
+        <p id="p1" class="italic"
 
 
 </body>
