--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
     <h1> INTRO to HTML and CSS </h1>
     <h2> Johnson Wang </h2> 
 
-    <div id = "div1" class="container">
-        <p id="p1" class="italic"
+    <div id= "div1" class="container">
+        <p id="p1" class="italic">
+        My favorite visualization is heat map </p>
+
+    <div id="div2" class="container">
+        <svg>
+            <rect x= "10" y="20" width="100" height= "100"
+            style="fill:blue;">
+
 
 
 </body>
