--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <div id="div2" class="container">
         <svg>
-            <rect x= "10" y="20" width="100" height= "100"
-            style="fill:blue;">
+            <rect x= "10" y="20" width="100" height= "100" fill="blue"/>
+        </svg>
 
 
 
