--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <h2> Johnson Wang </h2> 
 
     <div id= "div1" class="container">
-        <p id="p1" class="italic">
-        My favorite visualization is heat map </p>
+        <p id="p1" class="italic"> My favorite visualization is heat map </p>
 
     <div id="div2" class="container">
         <svg>
@@ -23,6 +22,7 @@
 
         </svg>
 
+        <img src="https://pbs.twimg.com/media/FHo7KkRUYAEmy8Q?format=jpg&name=4096x4096">
 
 
 </body>
