--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
         </svg>
 
-        <img src="https://pbs.twimg.com/media/FHo7KkRUYAEmy8Q?format=jpg&name=4096x4096">
+        <img src="https://pbs.twimg.com/media/FHo7KkRUYAEmy8Q?format=jpg&name=4096x4096"
+        width="450" height="200">
 
 
 </body>
